fix verticla-align of img in anchor

--- a/browser/styles/mixins/marked.styl
+++ b/browser/styles/mixins/marked.styl
@@ -26,6 +26,8 @@ marked()
     margin -5px
     transition .1s
     display inline-block
+    img
+      vertical-align sub
     &:hover
       color lighten(brandColor, 5%)
       text-decoration underline
